<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/playerName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="1dp"
    android:textSize="18sp"
    android:drawableStart="@drawable/baseline_person_24"
    android:gravity="center_vertical"
    android:drawablePadding="8dp"
    android:hint="Player x"/>